--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /home/app/
 RUN wget https://repo.continuum.io/archive/Anaconda3-5.0.1-Linux-x86_64.sh
 RUN bash Anaconda3-5.0.1-Linux-x86_64.sh -b
 RUN rm Anaconda3-5.0.1-Linux-x86_64.sh
-
+RUN conda init bash
 # Set path to conda
 #ENV PATH /root/anaconda3/bin:$PATH
 ENV PATH /home/app/anaconda3/bin:$PATH
