--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,7 +35,7 @@ RUN sed -i "1254s/torch\.backends\.cudnn\.enabled/False/g" /opt/conda/lib/python
 COPY ./requirements.txt /tmp/requirements.txt
 #COPY . /tmp/
 ENV CenterNet_ROOT /app
-git clone https://github.com/xingyizhou/CenterNet /app
+RUN git clone https://github.com/xingyizhou/CenterNet /app
 RUN pip install -r /tmp/requirements.txt
 RUN pip install git+https://github.com/philferriere/cocoapi.git#subdirectory=PythonAPI
 WORKDIR /app/src/lib/models/networks/DCNv2
